--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Welcome to my GitHub Portfolio.
             <div class="row">
                 <div class="col d-flex flex-column align-items-center hero_4_col_0">
                     <h1 class="text-left text-light">Contact Me</h1>
-                    <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch via the form below, or by emailing&nbsp;<a id="contactme_link" href="mailto:sana.mngadi@gmail.com?subject=Hello!">
+                    <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:sana.mngadi@gmail.com?subject=Hello!">
                             <p>hello@snm.codes</p>
                         </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:sana.mngadi@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">2020</span></a>
                 </div>
