:lipstick: UI Update to Text font

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=8fbed9b164a5736f265f52a41907c8ba">
+    <link rel="stylesheet" href="assets/css/index.css?h=2ac3083ea58f9f38811012d3abfa9f45">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=b75a009e6cf8e532b22a9f54f36bb94f">
     <link rel="stylesheet" href="assets/css/styles.css?h=2df293380041d428f031f67a9a3f9305">
 </head>
@@ -70,7 +70,7 @@ Welcome to my GitHub Portfolio.
                     <p class="text-light hero_2_par_0">🔭 I’m currently working on Teeker Corp App...<br>🌱 I’m currently learning WebApp &amp; Mobile App development...<br>👯 I’m looking to collaborate on great projects...<br>🤔 I’m looking for help with Website projects...</p>
                 </div>
                 <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
-                    <h2 class="text-center text-light">ABOUT ME 💬<br></h2>
+                    <h2 class="text-center text-light hero_2_heading_1" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
                     <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development and soon moving into the Mobile App development field.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
                 </div>
             </div>
@@ -80,7 +80,7 @@ Welcome to my GitHub Portfolio.
         <div class="container hero_3_container0">
             <div class="row">
                 <div class="col-xl-12">
-                    <h2 class="text-center text-light">I have experience in these fields</h2>
+                    <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields_</h2>
                 </div>
                 <div class="col-12 d-flex flex-row justify-content-center flex-wrap flex-sm-row flex-md-row flex-lg-row flex-xl-row">
                     <p class="devicon-heroku-original-wordmark skill-icons"></p>
@@ -103,7 +103,7 @@ Welcome to my GitHub Portfolio.
         <div class="container">
             <div class="row">
                 <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                    <h1 class="text-left text-light">Contact Me</h1>
+                    <h1 class="text-left text-light hero_4_heading_0">Contact Me_</h1>
                     <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:sana.mngadi@gmail.com?subject=Hello!">
                             <p>hello@snm.codes</p>
                         </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:sana.mngadi@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">2020</span></a>
