:lipstick: UI Update
1. Changed the displayed contact me email to the correct one.
2. Change the buttons 2020 to smile emoji.
3. Make the scroll to section smooth.
4. Changed the scroll bar style.

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tomorrow&amp;subset=latin-ext">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/cyberpunk.css?h=602500fe335e4e74a6ca66c22a756367">
+    <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/index.css?h=2ac3083ea58f9f38811012d3abfa9f45">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=b75a009e6cf8e532b22a9f54f36bb94f">
-    <link rel="stylesheet" href="assets/css/styles.css?h=2df293380041d428f031f67a9a3f9305">
+    <link rel="stylesheet" href="assets/css/styles.css?h=62053a3be0208f0c9e27b3e27610f24c">
 </head>
 
 <body>
@@ -105,8 +105,8 @@ Welcome to my GitHub Portfolio.
                 <div class="col d-flex flex-column align-items-center hero_4_col_0">
                     <h1 class="text-left text-light hero_4_heading_0">Contact Me_</h1>
                     <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:sana.mngadi@gmail.com?subject=Hello!">
-                            <p>hello@snm.codes</p>
-                        </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:sana.mngadi@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">2020</span></a>
+                            <p>sana.mngadi@gmail.com</p>
+                        </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:sana.mngadi@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
                 </div>
             </div>
         </div>
