:lipstick: UI Update
1. Added font glitch effects
2. Changed the contact me email address

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
+    <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=2ac3083ea58f9f38811012d3abfa9f45">
+    <link rel="stylesheet" href="assets/css/index.css?h=66cae490669f038634b461d9e1d9cf9c">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=b75a009e6cf8e532b22a9f54f36bb94f">
     <link rel="stylesheet" href="assets/css/styles.css?h=62053a3be0208f0c9e27b3e27610f24c">
 </head>
@@ -53,7 +54,7 @@ Welcome to my GitHub Portfolio.
             <div class="row d-flex flex-column justify-content-center align-items-center align-content-center">
                 <div class="col-8 col-sm-5 col-md-3 col-lg-3 col-xl-2"><img class="rounded-circle img-fluid" id="profile_picture" src="https://avatars.githubusercontent.com/LTSana" width="100%" alt="profile_picture"></div>
                 <div class="col-sm-9 col-md-6 col-lg-5 col-xl-3">
-                    <h1 class="text-center text-light hero_1_heading_0">Hi, I'm Sana</h1>
+                    <h1 class="text-center text-light hero_1_heading_0 crazy_font_glitch">Hi, I'm Sana</h1>
                 </div>
             </div>
         </div>
@@ -70,7 +71,7 @@ Welcome to my GitHub Portfolio.
                     <p class="text-light hero_2_par_0">🔭 I’m currently working on Teeker Corp App...<br>🌱 I’m currently learning WebApp &amp; Mobile App development...<br>👯 I’m looking to collaborate on great projects...<br>🤔 I’m looking for help with Website projects...</p>
                 </div>
                 <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
-                    <h2 class="text-center text-light hero_2_heading_1" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
+                    <h2 class="text-center text-light hero_2_heading_1 side_font_glitch" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
                     <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development and soon moving into the Mobile App development field.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
                 </div>
             </div>
@@ -103,10 +104,10 @@ Welcome to my GitHub Portfolio.
         <div class="container">
             <div class="row">
                 <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                    <h1 class="text-left text-light hero_4_heading_0">Contact Me_</h1>
-                    <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:sana.mngadi@gmail.com?subject=Hello!">
-                            <p>sana.mngadi@gmail.com</p>
-                        </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:sana.mngadi@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                    <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">Contact Me_&nbsp;📫</h1>
+                    <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
+                            <p>snm.developer@gmail.com</p>
+                        </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
                 </div>
             </div>
         </div>
