:lipstick: UI Update
1. Added glitch effects to menu links
2. Change the style of the mobile menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/index.css?h=66cae490669f038634b461d9e1d9cf9c">
-    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=b75a009e6cf8e532b22a9f54f36bb94f">
+    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=1d3a1936aa86b0228241f5e7476f0fb1">
     <link rel="stylesheet" href="assets/css/styles.css?h=62053a3be0208f0c9e27b3e27610f24c">
 </head>
 
@@ -41,10 +41,10 @@ Welcome to my GitHub Portfolio.
             <div class="container-fluid"><a class="navbar-brand" href="/"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left" href="/">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left" href="#hero_1">BIO</a></li>
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left" href="#hero_3">SKILLS</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-dark action-button" role="button" href="#hero_4">Contact</a></span>
+                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="/">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_1">BIO</a></li>
+                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_3">SKILLS</a></li>
+                    </ul><span class="navbar-text actions nav_link_btn_span"> <a class="btn btn-dark btn-block action-button nav_link_btn" role="button" href="#hero_4">Contact_</a></span>
                 </div>
             </div>
         </nav>
