:lipstick: UI Update
1. Added glitch effect to underscore of (SKILLS)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Welcome to my GitHub Portfolio.
         <div class="container hero_3_container0">
             <div class="row">
                 <div class="col-xl-12">
-                    <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields_</h2>
+                    <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields<span class="crazy_font_glitch">_</span></h2>
                 </div>
                 <div class="col-12 d-flex flex-row justify-content-center flex-wrap flex-sm-row flex-md-row flex-lg-row flex-xl-row">
                     <p class="devicon-heroku-original-wordmark skill-icons"></p>
