:sparkles: Added PayPal Donation Button
1. Added paypal donation button to website.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=66cae490669f038634b461d9e1d9cf9c">
+    <link rel="stylesheet" href="assets/css/index.css?h=2fa2f77e3740ea26b99a1d4a6c31c6dc">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -104,10 +104,34 @@ Welcome to my GitHub Portfolio.
         <div class="container">
             <div class="row">
                 <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                    <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">Contact Me_&nbsp;📫</h1>
+                    <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
                     <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
                             <p>snm.developer@gmail.com</p>
                         </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="hero_5">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 col-sm-12 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row hero_5_col_0">
+                    <h1 class="text-center text-light crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
+                    <p class="text-light">By donating you are supporting:<br></p>
+                    <ul class="text-light">
+                        <li>My servers.</li>
+                        <li>My hobbies.</li>
+                        <li>My ability to work more on new tech.</li>
+                        <li>Others...</li>
+                    </ul><div id="paypal_btn">
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="UFABXJRR5Q8CJ">
+		<!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynow_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
+		<button class="btn btn-primary" type="submit" id="contactme_btn"><span class="btn__content">DONATE 2 Sana_</span><span class="btn__glitch"></span><span class="btn__label">🤲<br /></span></button>
+		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+	</form>
+</div>
                 </div>
             </div>
         </div>
