--- a/index.html
+++ b/index.html
@@ -30,101 +30,102 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=2fa2f77e3740ea26b99a1d4a6c31c6dc">
+    <link rel="stylesheet" href="assets/css/index.css?h=e24801ee3560f1b94c706703310c5d67">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
 
 <body>
-    <section id="hero_0">
-        <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean-button">
-            <div class="container-fluid"><a class="navbar-brand" href="/"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="/">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_1">BIO</a></li>
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_3">SKILLS</a></li>
-                        <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_5">DONATIONS</a></li>
-                    </ul><span class="navbar-text actions nav_link_btn_span"> <a class="btn btn-dark btn-block action-button nav_link_btn" role="button" href="#hero_4">Contact_</a></span>
+    <div id="main_div">
+        <section id="hero_0">
+            <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean-button">
+                <div class="container-fluid"><a class="navbar-brand" href="/"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="nav navbar-nav mx-auto">
+                            <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="/">HOME</a></li>
+                            <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_1">BIO</a></li>
+                            <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_3">SKILLS</a></li>
+                            <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_5">DONATIONS</a></li>
+                        </ul><span class="navbar-text actions nav_link_btn_span"> <a class="btn btn-dark btn-block action-button nav_link_btn" role="button" href="#hero_4">Contact_</a></span>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <section id="hero_1">
+            <div class="container">
+                <div class="row d-flex flex-column justify-content-center align-items-center align-content-center">
+                    <div class="col-8 col-sm-5 col-md-3 col-lg-3 col-xl-2"><img class="rounded-circle img-fluid" id="profile_picture" src="https://avatars.githubusercontent.com/LTSana" width="100%" alt="profile_picture"></div>
+                    <div class="col-sm-9 col-md-6 col-lg-5 col-xl-3">
+                        <h1 class="text-center text-light hero_1_heading_0 crazy_font_glitch">Hi, I'm Sana</h1>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </section>
-    <section id="hero_1">
-        <div class="container">
-            <div class="row d-flex flex-column justify-content-center align-items-center align-content-center">
-                <div class="col-8 col-sm-5 col-md-3 col-lg-3 col-xl-2"><img class="rounded-circle img-fluid" id="profile_picture" src="https://avatars.githubusercontent.com/LTSana" width="100%" alt="profile_picture"></div>
-                <div class="col-sm-9 col-md-6 col-lg-5 col-xl-3">
-                    <h1 class="text-center text-light hero_1_heading_0 crazy_font_glitch">Hi, I'm Sana</h1>
+        </section>
+        <section id="hero_2">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-11 col-lg-9 col-xl-8">
+                        <h1 class="text-center text-light hero_2_heading_0">👋Welcome to my GitHub Portfolio</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <p class="text-light hero_2_par_0">🔭 I’m currently working on Teeker Corp App...<br>🌱 I’m currently learning WebApp &amp; Mobile App development...<br>👯 I’m looking to collaborate on great projects...<br>🤔 I’m looking for help with Website projects...</p>
+                    </div>
+                    <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
+                        <h2 class="text-center text-light hero_2_heading_1 side_font_glitch" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
+                        <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development and soon moving into the Mobile App development field.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="hero_2">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-11 col-lg-9 col-xl-8">
-                    <h1 class="text-center text-light hero_2_heading_0">👋Welcome to my GitHub Portfolio</h1>
+        </section>
+        <section id="hero_3">
+            <div class="container hero_3_container0">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields<span class="crazy_font_glitch">_</span></h2>
+                    </div>
+                    <div class="col-12 d-flex flex-row justify-content-center flex-wrap flex-sm-row flex-md-row flex-lg-row flex-xl-row">
+                        <p class="devicon-heroku-original-wordmark skill-icons"></p>
+                        <p class="devicon-bootstrap-plain-wordmark skill-icons"></p>
+                        <p class="devicon-c-plain skill-icons"></p>
+                        <p class="devicon-css3-plain-wordmark skill-icons"></p>
+                        <p class="devicon-django-plain-wordmark skill-icons"></p>
+                        <p class="devicon-html5-plain-wordmark skill-icons"></p>
+                        <p class="devicon-javascript-plain skill-icons"></p>
+                        <p class="devicon-mysql-plain-wordmark skill-icons"></p>
+                        <p class="devicon-postgresql-plain-wordmark skill-icons"></p>
+                        <p class="devicon-python-plain-wordmark skill-icons"></p>
+                        <p class="devicon-sass-original skill-icons"></p>
+                        <p class="skill-icons"><i class="fa fa-github"></i></p>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-5">
-                    <p class="text-light hero_2_par_0">🔭 I’m currently working on Teeker Corp App...<br>🌱 I’m currently learning WebApp &amp; Mobile App development...<br>👯 I’m looking to collaborate on great projects...<br>🤔 I’m looking for help with Website projects...</p>
-                </div>
-                <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
-                    <h2 class="text-center text-light hero_2_heading_1 side_font_glitch" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
-                    <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development and soon moving into the Mobile App development field.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="hero_3">
-        <div class="container hero_3_container0">
-            <div class="row">
-                <div class="col-xl-12">
-                    <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields<span class="crazy_font_glitch">_</span></h2>
-                </div>
-                <div class="col-12 d-flex flex-row justify-content-center flex-wrap flex-sm-row flex-md-row flex-lg-row flex-xl-row">
-                    <p class="devicon-heroku-original-wordmark skill-icons"></p>
-                    <p class="devicon-bootstrap-plain-wordmark skill-icons"></p>
-                    <p class="devicon-c-plain skill-icons"></p>
-                    <p class="devicon-css3-plain-wordmark skill-icons"></p>
-                    <p class="devicon-django-plain-wordmark skill-icons"></p>
-                    <p class="devicon-html5-plain-wordmark skill-icons"></p>
-                    <p class="devicon-javascript-plain skill-icons"></p>
-                    <p class="devicon-mysql-plain-wordmark skill-icons"></p>
-                    <p class="devicon-postgresql-plain-wordmark skill-icons"></p>
-                    <p class="devicon-python-plain-wordmark skill-icons"></p>
-                    <p class="devicon-sass-original skill-icons"></p>
-                    <p class="skill-icons"><i class="fa fa-github"></i></p>
+        </section>
+        <section id="hero_4">
+            <div class="container">
+                <div class="row">
+                    <div class="col d-flex flex-column align-items-center hero_4_col_0">
+                        <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
+                        <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
+                                <p>snm.developer@gmail.com</p>
+                            </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="hero_4">
-        <div class="container">
-            <div class="row">
-                <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                    <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
-                    <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
-                            <p>snm.developer@gmail.com</p>
-                        </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="hero_5">
-        <div class="container">
-            <div class="row">
-                <div class="col-10 col-sm-12 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row hero_5_col_0">
-                    <h1 class="text-center text-light crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
-                    <p class="text-light">By donating you are supporting:<br></p>
-                    <ul class="text-light">
-                        <li>My servers.</li>
-                        <li>My hobbies.</li>
-                        <li>My ability to work more on new tech.</li>
-                        <li>Others...</li>
-                    </ul><div id="paypal_btn">
+        </section>
+        <section id="hero_5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-10 col-sm-12 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row hero_5_col_0">
+                        <h1 class="text-center text-light crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
+                        <p class="text-light">By donating you are supporting:<br></p>
+                        <ul class="text-light">
+                            <li>My servers.</li>
+                            <li>My hobbies.</li>
+                            <li>My ability to work more on new tech.</li>
+                            <li>Others...</li>
+                        </ul><div id="paypal_btn">
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="UFABXJRR5Q8CJ">
@@ -133,10 +134,11 @@ Welcome to my GitHub Portfolio.
 		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 	</form>
 </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <div class="footer-dark">
         <footer>
             <div class="container">
