:lipstick: UI Update
1. Change the font family of Wish to donate

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=e24801ee3560f1b94c706703310c5d67">
+    <link rel="stylesheet" href="assets/css/index.css?h=2c387c3efa59b92b75af3b4315b24ce3">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -118,7 +118,7 @@ Welcome to my GitHub Portfolio.
             <div class="container">
                 <div class="row">
                     <div class="col-10 col-sm-12 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row hero_5_col_0">
-                        <h1 class="text-center text-light crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
+                        <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
                         <p class="text-light">By donating you are supporting:<br></p>
                         <ul class="text-light">
                             <li>My servers.</li>
