--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ Welcome to my GitHub Portfolio.
                         <ul class="text-light">
                             <li>My servers.</li>
                             <li>My hobbies.</li>
-                            <li>My ability to work more on new tech.</li>
+                            <li>My ability to work on new tech.</li>
                             <li>Others...</li>
                         </ul><div id="paypal_btn">
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="UFABXJRR5Q8CJ">
 		<!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynow_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
-		<button class="btn btn-primary" type="submit" id="contactme_btn"><span class="btn__content">DONATE 2 Sana_</span><span class="btn__glitch"></span><span class="btn__label">🤲<br /></span></button>
+		<button class="btn btn-primary" type="submit" id="contactme_btn"><span class="btn__content">DONATE TO Sana_</span><span class="btn__glitch"></span><span class="btn__label">🤲<br /></span></button>
 		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 	</form>
 </div>
