:lipstick: UI Update
1. Added new menu options to footer.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ Welcome to my GitHub Portfolio.
                             <li><a href="/">HOME</a></li>
                             <li><a href="#hero_1">BIO</a></li>
                             <li><a href="#hero_3">SKILLS<br></a></li>
+                            <li><a href="#hero_5">DONATIONS<br></a></li>
+                            <li><a href="#hero_4">CONTACT ME<br></a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
