:lipstick: UI Update
1. Added a label tip to the Contact Button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=2c387c3efa59b92b75af3b4315b24ce3">
+    <link rel="stylesheet" href="assets/css/index.css?h=af4668ac39677e693a70c54205bebb49">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -109,7 +109,8 @@ Welcome to my GitHub Portfolio.
                         <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
                         <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
                                 <p>snm.developer@gmail.com</p>
-                            </a></p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                            </a></p>
+                        <p class="text-center text-light">Or by pressing the button below</p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
                     </div>
                 </div>
             </div>
