--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=af4668ac39677e693a70c54205bebb49">
+    <link rel="stylesheet" href="assets/css/index.css?h=e368dc1097c8ba2bc6fb8aa50c3d5b14">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -117,16 +117,22 @@ Welcome to my GitHub Portfolio.
         </section>
         <section id="hero_5">
             <div class="container">
-                <div class="row">
-                    <div class="col-10 col-sm-12 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row hero_5_col_0">
+                <div class="row hero_5_row_0">
+                    <div class="col-10 col-sm-12 col-md-7 col-lg-4 col-xl-5 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row">
                         <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
+                    </div>
+                    <div class="col-sm-12 col-md-5 col-lg-3 col-xl-3">
                         <p class="text-light">By donating you are supporting:<br></p>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
                         <ul class="text-light">
                             <li>My servers.</li>
                             <li>My hobbies.</li>
                             <li>My ability to work on new tech.</li>
                             <li>Others...</li>
-                        </ul><div id="paypal_btn">
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-lg-12 d-flex flex-row justify-content-center"><div id="paypal_btn">
 	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="UFABXJRR5Q8CJ">
@@ -134,8 +140,7 @@ Welcome to my GitHub Portfolio.
 		<button class="btn btn-primary" type="submit" id="contactme_btn"><span class="btn__content">DONATE TO Sana_</span><span class="btn__glitch"></span><span class="btn__label">🤲<br /></span></button>
 		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 	</form>
-</div>
-                    </div>
+</div></div>
                 </div>
             </div>
         </section>
