--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow&amp;subset=latin-ext,vietnamese">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tomorrow&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=db5fbbc34070d36ea9b98958ab6f065c">
     <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=e368dc1097c8ba2bc6fb8aa50c3d5b14">
+    <link rel="stylesheet" href="assets/css/index.css?h=c150db54d7e64d04b16647efea89545d">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -71,6 +73,7 @@ Welcome to my GitHub Portfolio.
                 <div class="row">
                     <div class="col-sm-12 col-md-5">
                         <p class="text-light hero_2_par_0">🔭 I’m currently working on Teeker Corp App...<br>🌱 I’m currently learning WebApp &amp; Mobile App development...<br>👯 I’m looking to collaborate on great projects...<br>🤔 I’m looking for help with Website projects...</p>
+                        <p class="text-light hero_2_par_0">Fun fact ⚡<br>I love playing video games &amp; making YouTube videos.<br>I'm into sports and car racing.</p>
                     </div>
                     <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
                         <h2 class="text-center text-light hero_2_heading_1 side_font_glitch" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
@@ -106,11 +109,21 @@ Welcome to my GitHub Portfolio.
             <div class="container">
                 <div class="row">
                     <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                        <h1 class="text-left text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
+                        <h1 class="text-center text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
                         <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
                                 <p>snm.developer@gmail.com</p>
                             </a></p>
                         <p class="text-center text-light">Or by pressing the button below</p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                        <h5 class="text-light hero_4_heading_1"><i class="fab fa-discord"></i>&nbsp;DISCORD:&nbsp;LT.Sana#9372</h5>
+                        <h5 class="text-light hero_4_heading_1"><i class="fab fa-github"></i>&nbsp;GITHUB:&nbsp;<a class="hero_4_links" href="https://github.com/LTSana" target="_blank" rel="noopener">LTSana</a>&nbsp;</h5>
+                        <h5 class="text-light hero_4_heading_1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-world">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <circle cx="12" cy="12" r="9"></circle>
+                                <line x1="3.6" y1="9" x2="20.4" y2="9"></line>
+                                <line x1="3.6" y1="15" x2="20.4" y2="15"></line>
+                                <path d="M11.5 3a17 17 0 0 0 0 18"></path>
+                                <path d="M12.5 3a17 17 0 0 1 0 18"></path>
+                            </svg>&nbsp;WEBSITE:&nbsp;<a class="hero_4_links" href="http://snm.codes" target="_blank" rel="noopener">LT.Sana</a>&nbsp;</h5>
                     </div>
                 </div>
             </div>
@@ -118,11 +131,11 @@ Welcome to my GitHub Portfolio.
         <section id="hero_5">
             <div class="container">
                 <div class="row hero_5_row_0">
-                    <div class="col-10 col-sm-12 col-md-7 col-lg-4 col-xl-5 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row">
+                    <div class="col-10 col-sm-12 col-md-12 col-lg-4 col-xl-5 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row">
                         <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-3 col-xl-3">
-                        <p class="text-light">By donating you are supporting:<br></p>
+                        <p class="text-center text-light">By donating you are supporting:<br></p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
                         <ul class="text-light">
@@ -163,7 +176,7 @@ Welcome to my GitHub Portfolio.
                         <h3>LT.Sana</h3>
                         <p>I am a Full Stack Web Application Developer.<br>I focus on user experience on the Front-End and Application scalability on the Back-End.<br>And love to build the dreams of my Clients &amp; Employers...👨🏽‍💻<br></p>
                     </div>
-                    <div class="col item social"><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-twitter"></i></a><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a></div>
+                    <div class="col item social"><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-twitter"></i></a><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a></div>
                 </div>
                 <p class="copyright">LT.Sana © 2020</p>
             </div>
