:lipstick: UI Update
1. Change the look of the Contact Me section.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=c150db54d7e64d04b16647efea89545d">
+    <link rel="stylesheet" href="assets/css/index.css?h=f6627f4ba4e6a3d5895e9f450886ce83">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 </head>
@@ -107,13 +107,15 @@ Welcome to my GitHub Portfolio.
         </section>
         <section id="hero_4">
             <div class="container">
-                <div class="row">
-                    <div class="col d-flex flex-column align-items-center hero_4_col_0">
-                        <h1 class="text-center text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h1>
+                <div class="row hero_4_row_0">
+                    <div class="col d-flex flex-column align-items-center">
+                        <h2 class="text-center text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h2>
                         <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
                                 <p>snm.developer@gmail.com</p>
                             </a></p>
                         <p class="text-center text-light">Or by pressing the button below</p><a class="btn btn-primary" role="button" id="contactme_btn" href="mailto:snm.developer@gmail.com?subject=Hello!"><span class="btn__content">Contact Sana_</span><span class="btn__glitch"></span><span class="btn__label">🙂<br></span></a>
+                    </div>
+                    <div class="col-md-5 d-flex flex-column justify-content-center align-items-center align-content-center">
                         <h5 class="text-light hero_4_heading_1"><i class="fab fa-discord"></i>&nbsp;DISCORD:&nbsp;LT.Sana#9372</h5>
                         <h5 class="text-light hero_4_heading_1"><i class="fab fa-github"></i>&nbsp;GITHUB:&nbsp;<a class="hero_4_links" href="https://github.com/LTSana" target="_blank" rel="noopener">LTSana</a>&nbsp;</h5>
                         <h5 class="text-light hero_4_heading_1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-world">
