--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Welcome to my GitHub Portfolio.
                     <div class="col-10 col-sm-12 col-md-12 col-lg-4 col-xl-5 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row">
                         <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
                     </div>
-                    <div class="col-sm-12 col-md-5 col-lg-3 col-xl-3">
+                    <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 d-flex flex-column justify-content-center align-items-center">
                         <p class="text-center text-light">By donating you are supporting:<br></p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
