📈 Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=db5fbbc34070d36ea9b98958ab6f065c">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=9db842b3dc3336737559eb4abc0f1b3d">
     <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
@@ -35,6 +35,15 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/index.css?h=9e08f4f1f2d389db1fe84fe053256618">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96780272-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-96780272-1');
+</script>
 </head>
 
 <body>
