--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96780272-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-96780272-1');
+  gtag('config', 'G-DVTXW6GVE5');
 </script>
 </head>
 
