📈Adding Google AdSense Script

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/index.css?h=9e08f4f1f2d389db1fe84fe053256618">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
+	<script data-ad-client="ca-pub-6676328093923167" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
 <script>
