--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=9e08f4f1f2d389db1fe84fe053256618">
+    <link rel="stylesheet" href="assets/css/index.css?h=55dea9fdadec7569ef6850f056fb56a0">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
-	<script data-ad-client="ca-pub-6676328093923167" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
 <script>
@@ -166,6 +165,39 @@ Welcome to my GitHub Portfolio.
 		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 	</form>
 </div></div>
+                </div>
+            </div>
+        </section>
+        <section id="hero-6">
+            <div class="container hero-6-container">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="side_font_glitch">PROJECTS I'VE WORKED ON</h1>
+                    </div>
+                </div>
+                <div class="row hero-6-row-workholder">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-center"><img src="assets/img/showcase/project_pixrweb.png?h=c7920c9ec0341631744d46c31a773bed" width="90%"></div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <h1><strong>Pixrweb</strong></h1>
+                        <h5>Role: Lead Developer</h5>
+                        <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="row hero-6-row-workholder">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-center"><img src="assets/img/showcase/ready_plate_0.png?h=1321c7a6c20c4300eda49692b40e5eb1" width="90%"></div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <h1><strong>Down Two Earth</strong></h1>
+                        <h5>Role: Lead Developer</h5>
+                        <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="row hero-6-row-workholder">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-center"><img src="assets/img/showcase/londonrp.png?h=3f0f85f9f690dde406f91d79dcb2a28d" width="90%"></div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <h1><strong>London Roleplay</strong></h1>
+                        <h5>Role: Lead Developer</h5>
+                        <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
