:bug: Missing http for hyper links

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Welcome to my GitHub Portfolio.
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                         <h1><strong>Pixrweb</strong></h1>
                         <h5>Role: Lead Developer</h5>
-                        <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="https://pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
@@ -188,7 +188,7 @@ Welcome to my GitHub Portfolio.
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                         <h1><strong>Down Two Earth</strong></h1>
                         <h5>Role: Lead Developer</h5>
-                        <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="https://d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
@@ -196,7 +196,7 @@ Welcome to my GitHub Portfolio.
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                         <h1><strong>London Roleplay</strong></h1>
                         <h5>Role: Lead Developer</h5>
-                        <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="https://londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
