--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=55dea9fdadec7569ef6850f056fb56a0">
+    <link rel="stylesheet" href="assets/css/index.css?h=6cf60a74e5ce93bfb513e74eecabe3b7">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=63b239a802eee1c67fae1e4c376da8b2">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -181,6 +181,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>Pixrweb</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="https://pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <h4 class="text-center pagespeed-heading" data-website="pixrweb.com" data-score_id="0"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-0" class="score-holder">Loading...</span><span id="score-status-0"></span></h4>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
@@ -189,6 +190,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>Down Two Earth</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="https://d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <h4 class="text-center pagespeed-heading" data-website="d2e.gg" data-score_id="1">Google PageSpeed Insight Score:&nbsp;<span id="score-holder-1" class="score-holder">Loading...</span><span id="score-status-1"></span></h4>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
@@ -197,6 +199,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>London Roleplay</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="https://londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <h4 class="text-center pagespeed-heading" data-website="london.org" data-score_id="2"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-2" class="score-holder">Loading...</span><span id="score-status-2"></span></h4>
                     </div>
                 </div>
             </div>
@@ -229,6 +232,7 @@ Welcome to my GitHub Portfolio.
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
+    <script src="assets/js/index.js?h=1eecbb32f0ae46eee4502c4ff6b7a1e9"></script>
 </body>
 
 </html>
